# FAIFWM

./: .gitignore  README.md  pyproject.toml  test_poc.py
.agents/: PRD.md
.agents/plans/: 01-core-protection-engine.md  02-api-gateway.md  03-grpc-orchestration.md
.agents/reference/: fastapi-sse-best-practices.md  grpc-protobuf-reference.md  pytorch-audio-best-practices.md  testing-and-logging.md
gateway/: grpc_client.py  main.py
protos/: orchestration.proto
worker/: engine.py  grpc_server.py
